# xbot

./: Cargo.toml  Makefile  README.md  build.sh  canister_ids.json  dfx.json
cronjobs/: cryptocurrency.js
src/icbot/: Cargo.toml
src/icbot/src/: accounts.rs  cryptocurrency.rs  hackernews.rs  lib.rs  modulation.rs  watcherguru.rs  whalealert.rs
src/xbot/: Cargo.toml  xbot.did
src/xbot/src/: bbc.rs  hackernews.rs  lib.rs  modulation.rs  rss.rs  watcherguru.rs  whalealert.rs
