[package]
name = "icbot"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.2.1"
candid = "0.9.0"
hex = "0.4.3"
ic-cdk = "0.10.0"
ic-cdk-macros = "0.7.1"
ic-cdk-timers = "0.4.0"
ic-ledger-types = "0.7.0"
num-format = "0.4.4"
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.104"
url = "2.4.0"
