[package]
name = "xbot"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
candid = "0.9.11"
hex = "0.4.3"
ic-cdk = "0.11.3"
ic-cdk-macros = "0.8.1"
ic-cdk-timers = "0.5.1"
ic-ledger-types = "0.8.0"
num-format = "0.4.4"
regex = "1.10.6"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
url = "2.4.1"
